--- a/data/server/edit.html
+++ b/data/server/edit.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Bentuino Control Panel</title>
+  <title>BLIP Control Panel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark" />
   <script src="osc-mini.js"></script>
@@ -648,7 +648,7 @@
             </svg>
           </div>
           <div class="title-block">
-            <h1 class="title">Bentuino Control Panel</h1>
+            <h1 class="title">BLIP Control Panel</h1>
             <p class="subtitle">
               Live settings, OSC control and firmware updates — without touching your stored config.
             </p>
