add bleeding edge

--- a/data/server/edit.html
+++ b/data/server/edit.html
@@ -95,6 +95,15 @@
               </button>
             </div>
             <p class="server-version-status subtle" id="serverUploadStatus">Upload not started.</p>
+            <div class="bleeding-edge-panel" id="bleedingEdgePanel">
+              <div class="bleeding-edge-text">
+                <span class="meta-label">Bleeding edge build</span>
+                <p class="server-version-status subtle" id="bleedingEdgeStatus">Checking master branch build…</p>
+              </div>
+              <button class="btn btn-compact" id="bleedingEdgeAction" disabled>
+                Download bleeding edge
+              </button>
+            </div>
           </div>
 
           <div class="toggle-wrap">
